--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.17.3"
+    "ejs": "^3.0.2",
+    "express": "^4.17.3",
+    "mongoose": "^6.3.0"
   }
 }
